switch to Suprmarket with new header, styling to results views

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,5 +1,5 @@
 .home_content
-  .logo Splunkr.
+  .logo Suprmarket
   .tagline= t(:tagline)
   - form_tag(search_path, :id => 'search', :method => :get) do
     .form
