--- a/app/views/listings/_grid.html.haml
+++ b/app/views/listings/_grid.html.haml
@@ -11,4 +11,4 @@
           = link_to result.title, result, :class => 'title'
         .details
           %span.price= result.price
-          = result.location
+          %span.location= result.location
