--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -46,12 +46,12 @@ button
   :font-size 16px
   :padding 0 10px  
 .btn_sm
-  :height 26px
+  :height 24px
   :font-size 14px
   :padding 0 8px
 .post_link
   background = !color2
-  :border 1px solid #0B54B1
+  :border 1px solid #000
   :color #fff
   :font-size 14px
   :font-weight bold
@@ -103,8 +103,12 @@ a
   :min-height 500px
 .header
   :text-align right
-  :height 55px
+  :height 65px
   :width 100%
+  :background-color #292929
+  :padding 5px 0 0 0
+  a
+    :color #fff
   .logged_out
     a
       :height 25px
@@ -114,9 +118,9 @@ a
       :padding 5px 8px
       :font-size 12px
       :font-weight bold
+      :color #fff
       &.active
         :background-color #F4F4F4
-        :border 1px solid #999999
         :border-bottom 0
         :color #ccc
   #register
@@ -133,13 +137,13 @@ a
       :right 0px
       :margin-top 5px
       :background-color #F4F4F4
-      :border 1px solid #999999
       :width 200px
       :padding 15px 15px 8px
       :display none
       :font-size 11px
       :position absolute
       a
+        color = !color2
         :border none
         :padding 0
         :margin-left 20px
@@ -198,9 +202,18 @@ label
 #search_small
   :float left
   :width 500px
-  :margin 15px 0px
+  :margin 15px 0 0
   input
     :outline none
+  button
+    :background url('/images/btn_bg_2.png') 0 0 repeat-x
+    :border 1px solid #666
+    :color #000
+    :text-shadow 0 1px 0 #777
+    &:hover
+      :border-color #888
+    &:active
+      :background #444
   #q
     :font-size 15px
     :margin 0
@@ -213,6 +226,13 @@ label
     :width 58px
     :padding 3px 5px
     :font-weight normal
+  #q, #zip_code
+    :background-color #333
+    :color #666
+    :border-color #000 #444 #444
+    &:focus
+      :background-color #666
+      :color #fff
   #categories
     :background #fff
     :display none
@@ -277,21 +297,24 @@ label
 .logo
   :width 215px
   :height 42px
-  :text-indent -10000px
   :overflow hidden
-  :background url('/images/logo_home.gif') top left no-repeat
   :float left
   :margin-left 115px
+  :font-size 36px
+  color = !color1
+  :font-weight bold
+  :letter-spacing -1px
 .logo_top
+  h2
+    :font-size 26px
   a
     :display block
-    :width 150px
+    :width auto
     :height 32px
-    :text-indent 10000px
     :overflow hidden
-    :background url('/images/logo.gif') top left no-repeat
     :float left
     :margin 15px 15px
+    :color #fff
   
 .tagline
   :float left
@@ -376,12 +399,12 @@ span.button
   :line-height 1.3
 div.price, span.price
   :color #54AE00
-  :font-size 22px
-  :font-weight normal
+  :font-weight bold
 div.price
   :width 300px
 table span.price
-  :font-size inherit
+  :font-size 15px
+  :font-weight bold
 
 .flag
   :background-image url('/images/flag.png')
@@ -453,17 +476,17 @@ table
   :border-spacing 0
 
   thead
-    :background-color #F5F5F5
+    :background-color #eee
     :color #ccc
     :text-align left
   th, td
-    :padding-left 20px
-    :vertical-align top
+    :padding 5px
+    :vertical-align middle  
   td
-    :padding 10px 20px
+    :padding 12px 0
   th
     :font-size 14px
-    :padding 5px 0 5px 20px
+    :padding 5px 0
     a
       :color #ccc
       :font-weight bold
@@ -489,6 +512,7 @@ span.user
   :font-size 11px
   :margin 22px 0 0 0
   :font-weight bold
+  :color #444
   .details
     :margin 0 8px 0 0
   img
@@ -497,7 +521,6 @@ span.user
 .search_details
   :color #CCCCCC
   :margin-left 20px
-  :margin-bottom 5px
   :font-size 11px
   img
     :vertical-align bottom
@@ -510,7 +533,7 @@ span.user
   :font-size 11px
   :display visible
   background-color = !color3
-  :padding 13px 0
+  :padding 10px 0
   :height 24px
   :float left
   :width 100%
@@ -522,7 +545,7 @@ span.user
   .search_views
     :position absolute
     :left 15px
-    :top 16px
+    :top 12px
     a
       &:hover
         :opacity .7
@@ -616,16 +639,37 @@ span.user
 tr.selected
   :background-color #F6F6F6
 td.fixed, th.fixed
-  :width 60px
+  :width 50px
+  :padding-left 15px
 td.icon, th.icon
-  :width 15px !important
+  :width 35px
+  :text-align center
 tr td a.photo_link
   :display block
   :width 19px
   :height 18px
   :overflow hidden
   :text-indent -10000px
-  :background url('/images/photo.png')
+  :background url('/images/pic.png') 0 0 no-repeat
+  :margin-left 6px
+  &:hover
+    :opacity .7    
+td
+  .preview
+    :border 1px solid #333
+    :margin-left 7px
+td
+  :color #999
+  :border-bottom 1px solid #eee
+  :font-size 12px 
+  a
+    color = !color1
+    &:hover
+      color = !color2
+td.title
+  :font-size 15px
+  :font-weight bold
+  :min-width 540px
 .list_view_icon
   :margin-left -1px
 .grid
@@ -648,12 +692,21 @@ tr td a.photo_link
     .title
       :font-size 11px
       :position absolute
-      :bottom 6px
+      :bottom 3px
       :left 1px
-      :width 156px
-      :padding 2px
-      :background  #000
-      :color #FFF
+      :width 152px
+      :padding 2px 4px 6px
+      :background #333
+      :color #fff
+      :font-weight bold
+      :line-height 1.15
+    .location
+      :font-size 11px
+      :float right
+      :color #999
+    .price
+      :font-size 12px
+      :float left
 .pagination
   :margin-top -1px
   :float left
