--- a/app/views/users/_bar.html.haml
+++ b/app/views/users/_bar.html.haml
@@ -1,6 +1,7 @@
 - if current_page?(sign_up_path)
   .logo_top
-    = link_to 'Splunkr.', root_path
+    %h2
+      = link_to 'Suprmarket', root_path
   = render 'searches/bar'
   .logged_out
     Already a member? 
@@ -18,7 +19,8 @@
 - elsif signed_out? 
   - unless current_page?(root_path)
     .logo_top
-      = link_to 'Splunkr.', root_path
+      %h2
+        = link_to 'Suprmarket', root_path
     = render 'searches/bar'
   .logged_out
     = link_to t(:register).capitalize, sign_up_path, :id => 'register'  
@@ -36,7 +38,8 @@
               = link_to 'forgot password', new_password_path
 - else
   .logo_top
-    = link_to 'Splunkr.', dashboard_path
+    %h2
+      = link_to 'Suprmarket', dashboard_path
   - unless current_page?(new_listing_path)
     = render 'searches/bar'
   = link_to 'Post', new_listing_path, :class => 'post_link'    
