moved grid view options inside of filter bar, styled homepage categories

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!! Strict
 %html(xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en")
   %head
-    %title Splunkr
+    %title Suprmarket
     %meta(http-equiv="Content-Type" content="text/html;charset=utf-8")
     
     = javascript_include_tag 'jquery', 'jquery.hint.js', 'jquery-ui', 'jquery.corner', 'application'
@@ -22,4 +22,4 @@
         = link_to t(:support).capitalize, support_path
         = link_to t(:feedback).capitalize, feedback_path
         = link_to t(:contact).capitalize, contact_path
-      Copyright 2009. Splunkr, Inc.
+      Copyright 2009. Suprmarket.
