--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -214,6 +214,13 @@ label
       :border-color #888
     &:active
       :background #444
+  #q, #zip_code
+    :background-color #333
+    :color #666
+    :border-color #000 #444 #444
+    &:focus
+      :background-color #444
+      :color #fff
   #q
     :font-size 15px
     :margin 0
@@ -226,13 +233,7 @@ label
     :width 58px
     :padding 3px 5px
     :font-weight normal
-  #q, #zip_code
-    :background-color #333
-    :color #666
-    :border-color #000 #444 #444
-    &:focus
-      :background-color #666
-      :color #fff
+    :border-left-color #000
   #categories
     :background #fff
     :display none
@@ -271,15 +272,16 @@ label
     :padding 6px 10px
     :font-weight normal
   #categories
+    :background #fff
+    :line-height 1.2
     :display none
     :position absolute
     :left 100%
     :font-size 11px
     :margin-left 5px
-    :top -250px
-    :height 500px
-    :border-left 1px solid #EEE
-    :padding-left 20px
+    :top -180px
+    :height 485px
+    :padding 10px 20px 10px 10px
     ul
       :list-style-type none
       :margin 0
@@ -287,6 +289,7 @@ label
       li
         :margin 0
         :padding 0
+        :font-weight bold
 #browse_categories
   :display inline
   :position relative
@@ -327,12 +330,10 @@ label
 #search_details
   :display none
   background-color = !color3
-  :width 357px
+  :width 359px
   :padding 12px 6px
-  :border 1px solid #ddd
   :font-size 11px
   :position absolute
-  :margin-top -1px
   :float left
   label
     :display inline
@@ -476,9 +477,11 @@ table
   :border-spacing 0
 
   thead
-    :background-color #eee
+    :background-color #f6f6f6
     :color #ccc
     :text-align left
+    :border-top 1px solid #ccc
+    :border-bottom 1px solid #ccc
   th, td
     :padding 5px
     :vertical-align middle  
@@ -674,7 +677,6 @@ td.title
   :margin-left -1px
 .grid
   :float left
-  :border-top 1px solid #999
   :padding 18px 0 18px 0
   :width 100%
   .results
@@ -736,15 +738,18 @@ td.title
     :margin-top 0
     :color #333
 .grid_view_details
-  :color #333
+  :color #AFD1E5 
   :float right
-  :margin-right 20px
+  :margin 6px 20px 0 0
+  :height 20px
+  :font-weight bold
+  a
+    color = !color4
+    :font-weight bold
   .image_size 
     :display inline
   .sort
     :margin-left 30px
     :display inline
-.listing_table
-  :border-top 1px solid #999
 @import dashboard.sass
 @import listing.sass
