--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -254,6 +254,13 @@ label {
       border-color: #888; }
     #search_small button:active {
       background: #444; }
+  #search_small #q, #search_small #zip_code {
+    background-color: #333;
+    color: #666;
+    border-color: #000 #444 #444; }
+    #search_small #q:focus, #search_small #zip_code:focus {
+      background-color: #444;
+      color: #fff; }
   #search_small #q {
     font-size: 15px;
     margin: 0;
@@ -265,14 +272,8 @@ label {
     margin-left: -5px;
     width: 58px;
     padding: 3px 5px;
-    font-weight: normal; }
-  #search_small #q, #search_small #zip_code {
-    background-color: #333;
-    color: #666;
-    border-color: #000 #444 #444; }
-    #search_small #q:focus, #search_small #zip_code:focus {
-      background-color: #666;
-      color: #fff; }
+    font-weight: normal;
+    border-left-color: #000; }
   #search_small #categories {
     background: #fff;
     display: none;
@@ -312,22 +313,24 @@ label {
     padding: 6px 10px;
     font-weight: normal; }
   #search #categories {
+    background: #fff;
+    line-height: 1.2;
     display: none;
     position: absolute;
     left: 100%;
     font-size: 11px;
     margin-left: 5px;
-    top: -250px;
-    height: 500px;
-    border-left: 1px solid #EEE;
-    padding-left: 20px; }
+    top: -180px;
+    height: 485px;
+    padding: 10px 20px 10px 10px; }
     #search #categories ul {
       list-style-type: none;
       margin: 0;
       padding: 0; }
       #search #categories ul li {
         margin: 0;
-        padding: 0; }
+        padding: 0;
+        font-weight: bold; }
 
 #browse_categories {
   display: inline;
@@ -371,12 +374,10 @@ label {
 #search_details {
   display: none;
   background-color: #e1f3fd;
-  width: 357px;
+  width: 359px;
   padding: 12px 6px;
-  border: 1px solid #ddd;
   font-size: 11px;
   position: absolute;
-  margin-top: -1px;
   float: left; }
   #search_details label {
     display: inline; }
@@ -528,9 +529,11 @@ table {
   clear: both;
   border-spacing: 0; }
   table thead {
-    background-color: #eee;
+    background-color: #f6f6f6;
     color: #ccc;
-    text-align: left; }
+    text-align: left;
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc; }
   table th, table td {
     padding: 5px;
     vertical-align: middle; }
@@ -739,7 +742,6 @@ td.title {
 
 .grid {
   float: left;
-  border-top: 1px solid #999;
   padding: 18px 0 18px 0;
   width: 100%; }
   .grid .results {
@@ -803,17 +805,19 @@ td.title {
     color: #333; }
 
 .grid_view_details {
-  color: #333;
+  color: #AFD1E5;
   float: right;
-  margin-right: 20px; }
+  margin: 6px 20px 0 0;
+  height: 20px;
+  font-weight: bold; }
+  .grid_view_details a {
+    color: #2d7bb2;
+    font-weight: bold; }
   .grid_view_details .image_size {
     display: inline; }
   .grid_view_details .sort {
     margin-left: 30px;
     display: inline; }
-
-.listing_table {
-  border-top: 1px solid #999; }
 
 .dashboard_table {
   border-top: 10px solid #E5F3FC; }
