--- a/app/views/users/_bar.html.haml
+++ b/app/views/users/_bar.html.haml
@@ -4,7 +4,6 @@
       = link_to 'Suprmarket', root_path
   = render 'searches/bar'
   .logged_out
-    Already a member? 
     .login
       = link_to t(:login).capitalize, sign_in_path, :id => 'login_link'
       .login_form
@@ -12,10 +11,11 @@
           .form
             .text_field= form.text_field :email, :title => 'email address'
             .text_field= form.password_field :password, :title => 'password'
-            .submit= image_submit_tag 'login_button.png', :alt => 'Log In'
-            = form.check_box :remember_me
-            = form.label :remember_me
-            = link_to 'forgot password', new_password_path
+            %button.btn_sm Log In
+            .remember
+              = form.check_box :remember_me
+              = form.label :remember_me
+              = link_to 'forgot password', new_password_path
 - elsif signed_out? 
   - unless current_page?(root_path)
     .logo_top
