--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -22,6 +22,16 @@ h4
   :color #003366
   :font-size 10px
   :font-weight bold
+h1
+  color = !color4
+  background = !color3
+  :width 100%
+  :height auto
+  :float left
+  :font-size 22px
+  :font-weight normal
+  :padding 13px 0 13px 15px
+  :margin 0 0 0 -15px
 button
   :vertical-align middle
   :font-style normal	
@@ -49,27 +59,12 @@ button
   :height 24px
   :font-size 14px
   :padding 0 8px
-.post_link
-  background = !color2
-  :border 1px solid #000
-  :color #fff
-  :font-size 14px
-  :font-weight bold
-  :padding 5px 11px
-  :text-shadow 0 -1px 0 #093366
-  :float right
-  :margin 15px 15px
-  &:hover
-    :border-color #062054
-    :color #fff
-  &:active
-    :background #1780D1
 .content
-  :margin-left 20px
+  :margin-left 15px
 body.searches .content
   :margin-left 0
   :min-width 990px
-.text_field, #search, #search_small, .search_filters
+.text_field, #search, #search_small, .search_filters, .password_field
   input
     :border-top 1px solid #777
     :padding 2px 5px 2px
@@ -89,13 +84,13 @@ body.searches .content
       :background-color #FFD
       color = !color1
 a
-  color = !color2
+  color = !color4
   :text-decoration none
   :outline none
   img
     :border 0
   &:hover
-    color = !color4
+    color = !color1
 .container
   :float left
   :width 100%
@@ -109,6 +104,8 @@ a
   :padding 5px 0 0 0
   a
     :color #fff
+    &:hover
+      :color #ccc
   .logged_out
     a
       :height 25px
@@ -123,6 +120,23 @@ a
         :background-color #F4F4F4
         :border-bottom 0
         :color #ccc
+      &:hover
+        :color #ccc
+  .post_link
+    background = !color4
+    :border 1px solid #000
+    :color #fff
+    :font-size 14px
+    :font-weight bold
+    :padding 5px 11px
+    :text-shadow 0 -1px 0 #093366
+    :float right
+    :margin 15px 15px
+    &:hover
+      background-color = !color2
+      :color #fff
+    &:active
+      :background #1780D1
   #register
     :float right
     :margin 11px 17px 0 0
@@ -131,10 +145,12 @@ a
     :z-index 1000
     :margin 17px 5px
     :position relative
+    #login_link
+      :margin-right 10px
     .login_form
       :z-index -1
       :text-align left
-      :right 0px
+      :right 10px
       :margin-top 5px
       :background-color #F4F4F4
       :width 200px
@@ -143,7 +159,7 @@ a
       :font-size 11px
       :position absolute
       a
-        color = !color2
+        color = !color4
         :border none
         :padding 0
         :margin-left 20px
@@ -154,6 +170,9 @@ a
         :text-transform lowercase
         :font-weight normal
         :color #333
+        :font-size 11px
+        :padding 0
+        :margin 0
       .text_field
         input
           :width 180px
@@ -163,30 +182,30 @@ a
         :width auto
         :margin 8px 0 0 0
         input
-          :margin 0
-          :padding 0
+          :margin-left 0
 .footer
   :clear both
   :background-color #EEE
   :border-top 1px solid #CCC
   :padding  0 20px 25px 20px
-  :color #BBB
-  :font-size 12px
+  :color #ccc
+  :font-size 11px
   .links
     :clear both
     :margin 25px 0 5px 0
   a
     :margin-right 10px
-    :color #AAA
+    :color #ccc
     :font-weight bold
     &:hover
       :color #555
 table
   :width 100%
 label
+  :font-size 12px 
   :display block
   :font-weight bold
-  :color #003366
+  color = !color4
   span
     :font-weight normal
 
@@ -254,9 +273,11 @@ label
       li
         :margin 0
         :padding 0
+        a
+          color = !color4
 #search
   :clear both
-  :padding-top 20px
+  :padding-top 5px
   input
     :outline none 
   #q
@@ -279,7 +300,7 @@ label
     :left 100%
     :font-size 11px
     :margin-left 5px
-    :top -180px
+    :top -190px
     :height 485px
     :padding 10px 20px 10px 10px
     ul
@@ -289,7 +310,6 @@ label
       li
         :margin 0
         :padding 0
-        :font-weight bold
 #browse_categories
   :display inline
   :position relative
@@ -322,8 +342,7 @@ label
 .tagline
   :float left
   :color #bbb
-  :line-height 60px
-  :margin-left 12px
+  :line-height 56px
   :font-size 12px
   :letter-spacing 1px
 
@@ -403,9 +422,11 @@ div.price, span.price
   :font-weight bold
 div.price
   :width 300px
-table span.price
+td.price
   :font-size 15px
   :font-weight bold
+  :text-align right
+  :padding-right 15px
 
 .flag
   :background-image url('/images/flag.png')
@@ -464,9 +485,12 @@ table span.price
     :font-size 12px
     :color #ccc
   h1
+    :padding 0
+    :background-color #fff
     :font-size 20px
     color = !color1
-    :margin 0 0 3px 0
+    :margin 0 0 5px 0
+    :font-weight bold
 
 .date
   :font-size 12px
@@ -555,7 +579,7 @@ span.user
   label
     :display block
     :padding-right 10px
-    :color #2D7BB2
+    color = !color4
     :font-size 11px
     :float left
     :white-space nowrap
@@ -603,7 +627,7 @@ span.user
   :border-right 1px solid #CAE7FC
   label
     :display block
-    :color #2D7BB2
+    color = !color4
     :font-size 11px
     :float left
     :white-space nowrap
@@ -668,7 +692,7 @@ td
   a
     color = !color1
     &:hover
-      color = !color2
+      :color #aaa
 td.title
   :font-size 15px
   :font-weight bold
@@ -677,27 +701,27 @@ td.title
   :margin-left -1px
 .grid
   :float left
-  :padding 18px 0 18px 0
+  :padding 15px 0 15px 0
   :width 100%
   .results
     :margin-right 18px
   .grid_result
-    :width 162px
+    :width auto
     :float left
-    :margin-left 20px
-    :margin-bottom 20px
+    :margin-left 15px
+    :margin-bottom 15px
     img
       :border 1px solid #333
     .image
       :position relative
-      :width 162px
+      :float left
     .title
       :font-size 11px
       :position absolute
       :bottom 3px
       :left 1px
-      :width 152px
-      :padding 2px 4px 6px
+      :width 99%
+      :padding 2px 0 6px
       :background #333
       :color #fff
       :font-weight bold
@@ -751,5 +775,46 @@ td.title
   .sort
     :margin-left 30px
     :display inline
+#register_intro
+  :float left
+  :width 340px
+  :margin 45px 40px 0 0
+  h2
+    :margin 0 0 15px 0
+    :color #ff3300
+    :font-size 18px
+  p
+    :margin 0 0 20px 0
+    :font-size 14px
+    :line-height 1.3
+    :color #666
+  li
+    :list-style disc outside
+    :color #666
+    :line-height 1.3
+    :margin 4px 0 0 15px
+    :font-size 14px
+#register_form
+  :float left
+  :margin 20px 40px 40px 40px
+  :height auto
+  input[type="text"], input[type="password"]
+    :margin 0
+    :width 250px
+    :height 24px
+    :font-size 14px
+  label
+    :margin 12px 0 4px 0
+  .btn_lg
+    :margin 15px 10px 0 0
+.messages
+  :background-color #FFF296
+  :font-size 12px
+  :font-weight bold
+  :width auto
+  :position fixed
+  :padding 5px 12px
+  :bottom 0
+  :right 15px
 @import dashboard.sass
 @import listing.sass
