--- a/public/stylesheets/sass/listing.sass
+++ b/public/stylesheets/sass/listing.sass
@@ -12,8 +12,8 @@
     :float left
 
 .listing_back
-  :border-bottom 1px solid #999999
-  :margin-left -20px
-  :padding-left 20px
-  :padding-bottom 5px
-  :margin-bottom 25px
+  background-color = !color3
+  color = !color4
+  :font-size 12px
+  :padding 6px 0 8px 20px
+  :margin 0 0 25px -20px
