--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -64,13 +64,12 @@ button
 body.searches .content
   :margin-left 0
   :min-width 990px
-.text_field, #search, #search_small, .search_filters, .password_field
-  input
+.text_field, #search, #search_small, .search_filters, .password_field, .text_area
+  input, textarea
     :border-top 1px solid #777
     :padding 2px 5px 2px
     font-family = !sans
     :font-weight bold
-    :height 22px
     :color #ddd
     :font-size 13px
     :vertical-align middle		
@@ -83,6 +82,8 @@ body.searches .content
     &:focus
       :background-color #FFD
       color = !color1
+  input
+    :height 22px
 a
   color = !color4
   :text-decoration none
@@ -182,7 +183,8 @@ a
         :width auto
         :margin 8px 0 0 0
         input
-          :margin-left 0
+          :margin 0 2px 0 0
+          :vertical-align middle 
 .footer
   :clear both
   :background-color #EEE
@@ -399,20 +401,19 @@ span.button
 .tabs
   :position relative
   :height 32px
+  :margin-top 20px  
 .tab_header
   :position relative
   :display block
-  :border 1px solid #CCC
-  :margin-top 1px
-  :background-color #F6F6F6
-  :border-bottom 0
-  :color #999
-  :padding 8px 10px
-  :margin-right 8px 
+  :background-color #fff
+  color = !color4
+  :margin 8px 20px 00 0
+  :padding-bottom 10px
   :float left
   :font-size 12px
+  :font-weight bold
 .description
-  :padding-top 20px
+  :padding-top 10px
   :font-size 14px
   color = !color1
   :clear both
@@ -421,7 +422,7 @@ div.price, span.price
   :color #54AE00
   :font-weight bold
 div.price
-  :width 300px
+  :font-size 20px
 td.price
   :font-size 15px
   :font-weight bold
@@ -430,33 +431,37 @@ td.price
 
 .flag
   :background-image url('/images/flag.png')
-  :background-position 10px center 
+  :background-position 0px 1px 
   :background-repeat no-repeat
-  :padding-left 25px
+  :padding-left 15px
 .active_tab
-  :top 1px
-  :background-color #E5F3FC
-  :border 1px solid #9A9A9A
-  :border-bottom 0
-  :margin-top 0
-  :padding-bottom 9px
-  :color #333333
+  :background-color #fff
+  color = !color1
   :z-index 2
 .tab
   :z-index 1
   :position relative
-  :background-color #E5F3FC
-  :border 1px solid #9A9A9A
-  :padding 12px
-  :width 355px
+  :padding 20px
+  :background-color #f6f6f6
+  :width 315px
   :clear both
   :float left
+  :height auto
+  :border-top 1px solid #eee
+  input[type="text"]
+    :width 130px
+    :margin 0 0 10px
   textarea
-    :width 353px
-    :height 120px
-  .submit
-    :text-align right
-    :padding 20px 0 0 0
+    :width 305px
+    :height 80px
+    :margin 0
+  input[type="radio"]
+    :margin 2px 0
+    :padding 0
+    :vertical-align middle
+  button
+    :margin-top 10px
+    
   label, legend
     :font-size 11px
     :color #333333
@@ -491,6 +496,12 @@ td.price
     color = !color1
     :margin 0 0 5px 0
     :font-weight bold
+  h3
+    :margin 0
+    :padding 20px 0 0
+    :border-top 1px solid #eee
+    :float left
+    :width 100%
 
 .date
   :font-size 12px
