more revisions to listing tabs, changed favorite button to sprite

--- a/app/views/listings/_results.html.haml
+++ b/app/views/listings/_results.html.haml
@@ -31,6 +31,8 @@
         %td= image_tag('rating.png') + " #{listing.user.rating} (#{listing.user.ratings_count})"
         %td.icon 
           - if @favorites.key?(listing.id)
-            = link_to(image_tag('favorite.png', :alt => 'Remove from favorites'), listing_favorite_path(listing, favorites[listing.id]), :method => :delete)
+            = link_to('Remove from favorites', listing_favorite_path(listing, favorites[listing.id]), :method => :delete, :class => 'fav on')
           - else 
-            = link_to(image_tag('not_favorite.png', :alt => 'Add to Favorites'), listing_favorites_path(listing), :method => :post)
+            /= link_to(image_tag('favorite.png', :alt => 'Remove from favorites'), listing_favorite_path(listing, favorites[listing.id]), :method => :delete)
+            /= link_to(image_tag('not_favorite.png', :alt => 'Add to Favorites'), listing_favorites_path(listing), :method => :post)
+            = link_to('Add to favorites', listing_favorites_path(listing), :method => :post, :class => 'fav')
