--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -401,13 +401,14 @@ span.button
 .tabs
   :position relative
   :height 32px
-  :margin-top 20px  
+  :margin-top 20px
+  :border-top 1px solid #eee  
 .tab_header
   :position relative
   :display block
   :background-color #fff
   color = !color4
-  :margin 8px 20px 00 0
+  :margin 10px 20px 0 0
   :padding-bottom 10px
   :float left
   :font-size 12px
@@ -441,18 +442,19 @@ td.price
 .tab
   :z-index 1
   :position relative
-  :padding 20px
-  :background-color #f6f6f6
-  :width 315px
+  :padding 20px 0
+  :background-color #fff
+  :width 355px
   :clear both
   :float left
   :height auto
-  :border-top 1px solid #eee
+ 
+  :display none
   input[type="text"]
     :width 130px
     :margin 0 0 10px
   textarea
-    :width 305px
+    :width 335px
     :height 80px
     :margin 0
   input[type="radio"]
@@ -682,6 +684,17 @@ td.fixed, th.fixed
 td.icon, th.icon
   :width 35px
   :text-align center
+  a.fav
+    :background url('/images/ui.png') 0 -12px no-repeat
+    :text-indent -10000px
+    :overflow hidden
+    :width 14px
+    :height 11px
+    :display block
+    &:hover
+      :background-position 0 -24px
+    &.on
+      :background-position 0 -36px
 tr td a.photo_link
   :display block
   :width 19px
@@ -737,6 +750,7 @@ td.title
       :color #fff
       :font-weight bold
       :line-height 1.15
+      :display none
     .location
       :font-size 11px
       :float right
