--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -553,8 +553,12 @@ span.user
   :margin 22px 0 0 0
   :font-weight bold
   :color #444
-  .details
-    :margin 0 8px 0 0
+  .details a
+    :margin 0 8px 0 5px
+    :font-weight normal
+    :color #666
+    &:hover
+      :color #aaa
   img
     :vertical-align middle
     :margin-left 2px
